--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
               </div>
           </div>
         </div>
-      <script src="src/index.js"></script>
+      <script src="index.js"></script>
     </div>
   </div>
    
