--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
-    <link href="styles.css" />
+    <link href="src/styles.css" />
     <script src="https://kit.fontawesome.com/4ed98313d6.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <h1>This is a header</h1>
       
     <div class="container">
         <div class="card border-dark mb-3">
@@ -44,9 +45,9 @@
 
 
           <div class="col-6 large-degree"> <span id="degrees">22°</span>
-						<span class= "small-font" id=fahrenheit> F </a></span>
+						<span class= "small-font" id=fahrenheit> F </span>
 						<span class="small-font">│</span>
-						<span class="small-font" id="celsius">C</a></span> <i class="fa-solid fa-cloud"></i>
+						<span class="small-font" id="celsius">C</span> <i class="fa-solid fa-cloud"></i>
 						
 						<div class="col-12 small-font">Humidity: 10%</div>
             <div class="col-12 small-font">Precipitation: 30%</div>
@@ -94,7 +95,7 @@
               </div>
           </div>
         </div>
-      <script src="index.js"></script>
+      <script src="src/index.js"></script>
     </div>
   </div>
    
