add github repository link to the bottom

--- a/index.html
+++ b/index.html
@@ -101,5 +101,6 @@
     </div>
   </div>
    
+  <a href="https://github.com/charnesim/weather-app">Link to Github Repository</a>
   </body>
 </html>
