changed temp conversion for html and js

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
 
           <div class="col-6 large-degree"> <span id="degrees">22°</span>
-						<span class= "small-font" id=fahrenheit> F </a></span>
+						<span class= "small-font" id=fahrenheit><a href="" id=fahrenheit-link> F </a></span>
 						<span class="small-font">│</span>
-						<span class="small-font" id="celsius">C</a></span> <i class="fa-solid fa-cloud"></i>
+						<span class="small-font" id="celsius"><a href="" id="celsius-link">C</a></span> <i class="fa-solid fa-cloud"></i>
 						
 						<div class="col-12 small-font">Humidity: 10%</div>
             <div class="col-12 small-font">Precipitation: 30%</div>
